// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontStretch renders 0 1`] = `
Array [
  .c0 {
  font-stretch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders function 1`] = `
Array [
  .c0 {
  font-stretch: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders invalid theme path 1`] = `
Array [
  .c0 {
  font-stretch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders negative number 1`] = `
Array [
  .c0 {
  font-stretch: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  font-stretch: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: July;
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-stretch: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-stretch: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-stretch: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-stretch: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  font-stretch: July;
}

@media May {
  .c0 {
    font-stretch: August;
  }
}

@media April {
  .c0 {
    font-stretch: September;
  }
}

@media January {
  .c0 {
    font-stretch: November;
  }
}

@media April {
  .c0 {
    font-stretch: August;
  }
}

@media June {
  .c0 {
    font-stretch: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: July;
}

@media May {
  .c0 {
    font-stretch: August;
  }
}

@media April {
  .c0 {
    font-stretch: September;
  }
}

@media January {
  .c0 {
    font-stretch: November;
  }
}

@media April {
  .c0 {
    font-stretch: August;
  }
}

@media June {
  .c0 {
    font-stretch: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-stretch: November;
  }
}

@media April {
  .c0 {
    font-stretch: January;
  }
}

@media January {
  .c0 {
    font-stretch: December;
  }
}

@media April {
  .c0 {
    font-stretch: April;
  }
}

@media June {
  .c0 {
    font-stretch: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-stretch: November;
  }
}

@media April {
  .c0 {
    font-stretch: January;
  }
}

@media January {
  .c0 {
    font-stretch: December;
  }
}

@media April {
  .c0 {
    font-stretch: April;
  }
}

@media June {
  .c0 {
    font-stretch: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    font-stretch: July;
  }
}

@media April {
  .c0 {
    font-stretch: August;
  }
}

@media January {
  .c0 {
    font-stretch: September;
  }
}

@media April {
  .c0 {
    font-stretch: November;
  }
}

@media June {
  .c0 {
    font-stretch: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-stretch: July;
  }
}

@media April {
  .c0 {
    font-stretch: August;
  }
}

@media January {
  .c0 {
    font-stretch: September;
  }
}

@media April {
  .c0 {
    font-stretch: November;
  }
}

@media June {
  .c0 {
    font-stretch: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-stretch: January;
  }
}

@media April {
  .c0 {
    font-stretch: December;
  }
}

@media January {
  .c0 {
    font-stretch: April;
  }
}

@media April {
  .c0 {
    font-stretch: May;
  }
}

@media June {
  .c0 {
    font-stretch: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-stretch: January;
  }
}

@media April {
  .c0 {
    font-stretch: December;
  }
}

@media January {
  .c0 {
    font-stretch: April;
  }
}

@media April {
  .c0 {
    font-stretch: May;
  }
}

@media June {
  .c0 {
    font-stretch: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders postitive number 1`] = `
Array [
  .c0 {
  font-stretch: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders string 1`] = `
Array [
  .c0 {
  font-stretch: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStretch renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`fontStretch renders valid theme path 1`] = `
Array [
  .c0 {
  font-stretch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-stretch: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
